# paddleocr_rs

./: Cargo.toml
src/: det.rs  error.rs  lib.rs  rec.rs
