[package]
name = "paddleocr_rs"
version = "0.1.1"
edition = "2021"
description = "paddleocr-v4 onnxrumtime infer"
license = "AGPL-3.0"
homepage = "https://github.com/yuanyan3060/paddleocr_rs"
repository = "https://github.com/yuanyan3060/paddleocr_rs"
readme = "README.md"
keywords = ["paddle", "ocr", "onnx"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"
ort = { version = "2.0.0-rc.6" }
thiserror = "1.0.56"

[dev-dependencies]
tracing-subscriber = "0.3.19"

[features]
ort-cuda = ["ort/cuda"]
ort-tensorrt = ["ort/tensorrt"]
ort-openvino = ["ort/openvino"]
ort-onednn = ["ort/onednn"]
ort-directml = ["ort/directml"]
ort-qnn = ["ort/qnn"]
ort-coreml = ["ort/coreml"]
ort-acl = ["ort/acl"]
ort-tvm = ["ort/tvm"]
ort-cann = ["ort/cann"]
